@@ -1,3 +1,6 @@
+* 2012-09-26 Dmytro Kovalov - v. 0.1.4
+  - added support for JSON-P parameters (?callback=<nam>)
+  - change API to hae all keywords underscored, to avoid clashes with object names
 * 2012-06-8 Dmytro Kovalov - v. 0.1.3
   - specs for /config, /status, /objects - simple page loads and data
     checks;
